# lxqt-l10n-deprecated

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  README-tr.md  README.md  check_ts.sh  create_new_authors.sh  translate.sh
compton-conf/: AUTHORS  compton-conf_fr.ts  compton-conf_pt.ts  compton-conf_tr_TR.ts  compton-conf_uk.ts
libfm-qt/: AUTHORS  libfm-qt_da.ts  libfm-qt_fr.ts  libfm-qt_lt.ts  libfm-qt_pt.ts  libfm-qt_tr.ts  libfm-qt_uk.ts
liblxqt/: AUTHORS  liblxqt_da.ts  liblxqt_es.ts  liblxqt_lt.ts  liblxqt_lv.ts  liblxqt_pl_PL.ts  liblxqt_pt.ts
lximage-qt/: lximage-qt_da.ts  lximage-qt_es.ts  lximage-qt_fr.ts  lximage-qt_is.ts  lximage-qt_it.ts  lximage-qt_lt.ts  lximage-qt_pt.ts  lximage-qt_tr_TR.ts  lximage-qt_uk.ts  lximage-qt_zh_CN.ts
lxqt-about/: lxqt-about_fr.ts  lxqt-about_pt.ts  lxqt-about_tr_TR.ts  lxqt-about_zh_TW.ts
lxqt-admin/: CMakeLists.txt
lxqt-admin/lxqt-admin-time/: lxqt-admin-time_da.ts  lxqt-admin-time_hu.ts  lxqt-admin-time_lt.ts  lxqt-admin-time_pl.ts  lxqt-admin-time_pt.ts  lxqt-admin-time_tr.ts  lxqt-admin-time_uk.ts
lxqt-admin/lxqt-admin-user/: lxqt-admin-user_da.ts  lxqt-admin-user_hu.ts  lxqt-admin-user_pt.ts  lxqt-admin-user_tr_TR.ts  lxqt-admin-user_uk.ts
lxqt-config/: AUTHORS  CMakeLists.txt
lxqt-config/liblxqt-config-cursor/: lxqt-config-cursor_da.ts  lxqt-config-cursor_pt.ts  lxqt-config-cursor_zh_CN.ts
lxqt-config/lxqt-config/: lxqt-config_pt.ts  lxqt-config_tr.ts  lxqt-config_tr_TR.ts
lxqt-config/lxqt-config-appearance/: lxqt-config-appearance_da.ts  lxqt-config-appearance_pt.ts  lxqt-config-appearance_tr.po  lxqt-config-appearance_uk.ts  lxqt-config-appearance_zh_CN.ts
lxqt-config/lxqt-config-brightness/: lxqt-config-brightness_da.ts  lxqt-config-brightness_ru.ts  lxqt-config-brightness_tr.ts
lxqt-config/lxqt-config-file-associations/: lxqt-config-file-associations_pt.ts  lxqt-config-file-associations_tr.ts
lxqt-config/lxqt-config-input/: lxqt-config-input_da.ts  lxqt-config-input_fr.ts  lxqt-config-input_pt.ts  lxqt-config-input_tr_TR.ts  lxqt-config-input_zh_CN.ts
lxqt-config/lxqt-config-locale/: lxqt-config-locale_da.ts  lxqt-config-locale_ja.ts  lxqt-config-locale_lt.ts  lxqt-config-locale_tr_TR.ts
lxqt-config/lxqt-config-monitor/: lxqt-config-monitor_pt.ts  lxqt-config-monitor_tr_TR.ts
lxqt-globalkeys/: CMakeLists.txt
lxqt-notificationd/: CMakeLists.txt
lxqt-openssh-askpass/: AUTHORS  CMakeLists.txt  lxqt-openssh-askpass.ts  lxqt-openssh-askpass_ar.ts  lxqt-openssh-askpass_ca.ts  lxqt-openssh-askpass_cs.ts  lxqt-openssh-askpass_da.ts  lxqt-openssh-askpass_de.ts  lxqt-openssh-askpass_el.ts  lxqt-openssh-askpass_es.ts  lxqt-openssh-askpass_fr.ts  lxqt-openssh-askpass_hu.ts  lxqt-openssh-askpass_id.ts  lxqt-openssh-askpass_it.ts  (+10 more)
lxqt-panel/: AUTHORS  CMakeLists.txt
lxqt-panel/panel/: lxqt-panel_da.ts  lxqt-panel_pt.ts  lxqt-panel_uk.ts
lxqt-panel/plugin-clock/: clock.ts  clock_ar.ts  clock_ca.ts  clock_cs.ts  clock_cs_CZ.ts  clock_da.ts  clock_da_DK.ts  clock_de.ts  clock_el.ts  clock_eo.ts  clock_es.ts  clock_es_UY.ts  clock_es_VE.ts  clock_eu.ts  clock_fi.ts  clock_fr.ts  clock_fr_FR.ts  clock_hr.ts  clock_hu.ts  clock_ia.ts  clock_id.ts  clock_id_ID.ts  clock_it.ts  clock_ja.ts  clock_ko.ts  clock_lt.ts  clock_nl.ts  clock_pl.ts  clock_pl_PL.ts  clock_pt.ts  clock_pt_BR.ts  clock_ro_RO.ts  clock_ru.ts  clock_sk_SK.ts  clock_sl.ts  clock_sr@latin.ts  clock_sr_BA.ts  clock_sr_RS.ts  clock_th_TH.ts  clock_tr.ts  (+3 more)
lxqt-panel/plugin-cpuload/: cpuload_pt.ts  cpuload_tr_TR.ts
lxqt-panel/plugin-desktopswitch/: desktopswitch_pt.ts  desktopswitch_tr_TR.ts
lxqt-panel/plugin-directorymenu/: directorymenu-pt.ts  directorymenu_da.ts  directorymenu_tr_TR.ts
lxqt-panel/plugin-dom/: dom_ar.ts  dom_pt.ts  dom_tr_TR.ts
lxqt-panel/plugin-kbindicator/: kbindicator_pt.ts  kbindicator_tr_TR.ts
lxqt-panel/plugin-mainmenu/: mainmenu_cs.ts  mainmenu_pt.ts  mainmenu_tr_TR.ts
lxqt-panel/plugin-mount/: mount_pt.ts  mount_tr_TR.ts
lxqt-panel/plugin-networkmonitor/: networkmonitor_pt.ts  networkmonitor_tr_TR.ts
lxqt-panel/plugin-quicklaunch/: quicklaunch_pt.ts  quicklaunch_tr_TR.ts
lxqt-panel/plugin-screensaver/: screensaver.ts  screensaver_ar.ts  screensaver_cs.ts  screensaver_cs_CZ.ts  screensaver_da.ts  screensaver_da_DK.ts  screensaver_de.ts  screensaver_el.ts  screensaver_eo.ts  screensaver_es.ts  screensaver_es_VE.ts  screensaver_eu.ts  screensaver_fi.ts  screensaver_fr_FR.ts  screensaver_hu.ts  screensaver_ia.ts  screensaver_id_ID.ts  screensaver_it.ts  screensaver_ja.ts  screensaver_ko.ts  screensaver_lt.ts  screensaver_nl.ts  screensaver_pl.ts  screensaver_pl_PL.ts  screensaver_pt.ts  screensaver_pt_BR.ts  screensaver_ro_RO.ts  screensaver_ru.ts  screensaver_sk_SK.ts  screensaver_sl.ts  screensaver_sr@latin.ts  screensaver_sr_BA.ts  screensaver_sr_RS.ts  screensaver_th_TH.ts  screensaver_tr.ts  screensaver_uk.ts  screensaver_zh_CN.ts  screensaver_zh_TW.ts
lxqt-panel/plugin-sensors/: sensors_pt.ts  sensors_tr_TR.ts
lxqt-panel/plugin-showdesktop/: showdesktop_pt.ts  showdesktop_tr_TR.ts
lxqt-panel/plugin-spacer/: spacer-pt.ts  spacer_ja.ts  spacer_tr_TR.ts
lxqt-panel/plugin-sysstat/: sysstat_pt.ts  sysstat_tr_TR.ts  sysstat_uk.ts
lxqt-panel/plugin-taskbar/: taskbar_cs.ts  taskbar_da.ts  taskbar_it.ts  taskbar_pt.ts  taskbar_tr_TR.ts  taskbar_zh_TW.ts
lxqt-panel/plugin-volume/: volume_cs.ts  volume_da.ts  volume_pt.ts  volume_tr_TR.ts
lxqt-panel/plugin-worldclock/: worldclock_da.ts  worldclock_pt.ts  worldclock_tr_TR.ts
lxqt-powermanagement/: CMakeLists.txt
lxqt-powermanagement/lxqt-config-powermanagement/: lxqt-config-powermanagement_da.ts  lxqt-config-powermanagement_pl_PL.ts  lxqt-config-powermanagement_pt.ts
lxqt-powermanagement/lxqt-powermanagement/: lxqt-powermanagement_lt.ts  lxqt-powermanagement_pt.ts
lxqt-session/: AUTHORS  CMakeLists.txt
lxqt-session/lxqt-config-session/: lxqt-config-session_da.ts  lxqt-config-session_pt.ts
lxqt-session/lxqt-leave/: lxqt-leave_pl.ts  lxqt-leave_pt.ts
lxqt-session/lxqt-session/: lxqt-session_pt.ts
(+58 files in other folders)
